Maybe a last fix to bottom bar item alignment.

--- a/src/components/NamedNavigationItem/styles.scss
+++ b/src/components/NamedNavigationItem/styles.scss
@@ -1,5 +1,6 @@
 @import "../../styles/boxmodel";
 @import "../../styles/colors";
+@import "../../styles/icons";
 @import "../../styles/font-sizes";
 
 .wrapper {
@@ -8,6 +9,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.visual {
+  display: inline-block;
+  width: $standardIconSize;
+  height: $standardIconSize;
 }
 
 .label {
